--- a/public/now.json
+++ b/public/now.json
@@ -2,7 +2,13 @@
   "version": 2,
   "name": "noteful-app",
   "routes": [
-      { "handle": "filesystem" },
-      { "src": "/.*", "dest": "/index.html" }
+    {
+      "src": "^/static/(.*)",
+      "dest": "/static/$1"
+    },
+    {
+      "src": ".*",
+      "dest": "/index.html"
+    }
   ]
 }
