--- a/public/now.json
+++ b/public/now.json
@@ -1,14 +1,9 @@
 {
   "version": 2,
+  "alias":"carl-ortutay-noteful-app",
   "name": "noteful-app",
   "routes": [
-    {
-      "src": "^/static/(.*)",
-      "dest": "/static/$1"
-    },
-    {
-      "src": ".*",
-      "dest": "/index.html"
-    }
+      { "handle": "filesystem" },
+      { "src": "/.*", "dest": "/index.html" }
   ]
 }
