added deployed api endpoint

--- a/public/now.json
+++ b/public/now.json
@@ -3,7 +3,13 @@
   "alias":"carl-ortutay-noteful-app",
   "name": "noteful-app",
   "routes": [
-      { "handle": "filesystem" },
-      { "src": "/.*", "dest": "/index.html" }
+    {
+      "src": "^/static/(.*)",
+      "dest": "/static/$1"
+    },
+    {
+      "src": ".*",
+      "dest": "/index.html"
+    }
   ]
 }
